# Clion-STC-template

./: .gitignore  CMakeLists.txt  README.md
fw_lib/demo/i2c/mpu6050/: main.c
fw_lib/include/: fw_conf.h  fw_reg_base.h
hardware/: gpio.c  gpio.h
user/: main.c  main.h
